--- a/index.html
+++ b/index.html
@@ -42,12 +42,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HỘI HAM CHƠI</title>
+    <title>APP SHARE BILL HỘI HAM CHƠI</title>
     <link rel="stylesheet" href="styles.css">
+    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2/dist/umd/supabase.min.js"></script>
 </head>
 <body>
     <header>
-        <h1>HỘI HAM CHƠI</h1>
+        <h1>APP SHARE BILL HỘI HAM CHƠI</h1>
     </header>
 
     <div class="tabs">
